<resources>
    <string name="app_name">Machineest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="dob">DOB:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="user_details">User Details</string>
</resources>